# chelssy

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  package-lock.json
docs/adr/: 0001-polling-state-machine.md  0002-board-reconciliation.md  0003-move-acquisition.md  0004-modes-as-parameters.md  0005-ports-and-adapters.md  0006-etl-over-std.md  0007-defer-cpp20-modules.md  0008-project-layout.md  0009-chess-domain-split.md  0010-move-generation-strategy.md  README.md
include/Chelssy/: Chess.hpp
include/chelssy/chess/: board.h  fen.h  types.h
src/: CMakeLists.txt
src/Chelssy/: Board.cpp  CMakeLists.txt  Chess.cppm
src/chess/: CMakeLists.txt  board.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
